--- a/Saved/Config/Windows/EditorUserSettings.ini
+++ b/Saved/Config/Windows/EditorUserSettings.ini
@@ -25,6 +25,7 @@ MultipleInstanceLastHeight=720
 MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@PELIKONE8-PC
 LastExecutedLaunchName=PELIKONE8-PC
+NewWindowPosition=(X=78,Y=137)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMiddleMousePan=False
@@ -68,6 +69,7 @@ AssetPropertyPicker.CurrentViewType=0
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/FirstPersonBP/Maps/FirstPersonExampleMap.FirstPersonExampleMap:PersistentLevel.FirstPersonExampleMap
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -198,6 +200,57 @@ BP_LaserTrap_C.TransformCommon=True
 BP_LaserTrap_C.Rendering=True
 BP_LaserTrap_C.Input=True
 BP_LaserTrap_C.Actor=True
+FirstPersonCharacter_C.TransformCommon=True
+FirstPersonCharacter_C.Animation=True
+FirstPersonCharacter_C.Mesh=True
+FirstPersonCharacter_C.Clothing=True
+FirstPersonCharacter_C.Physics=True
+FirstPersonCharacter_C.Collision=True
+FirstPersonCharacter_C.Rendering=True
+FirstPersonCharacter_C.Lighting=True
+FirstPersonCharacter_C.PhysicsVolume=True
+FirstPersonCharacter_C.Tags=True
+FirstPersonCharacter_C.Activation=True
+FirstPersonCharacter_C.Character Movement=True
+FirstPersonCharacter_C.Agent Physics=True
+FirstPersonCharacter_C.Avoidance=True
+FirstPersonCharacter_C.MovementComponent=True
+FirstPersonCharacter_C.Velocity=True
+FirstPersonCharacter_C.Shape=True
+FirstPersonCharacter_C.Character=True
+FirstPersonCharacter_C.Camera=True
+FirstPersonCharacter_C.Pawn=True
+FirstPersonCharacter_C.Input=True
+FirstPersonCharacter_C.Actor=True
+botWaypoint_C.TransformCommon=True
+botWaypoint_C.Default=True
+botWaypoint_C.Sprite=True
+botWaypoint_C.Rendering=True
+botWaypoint_C.Tags=True
+botWaypoint_C.Input=True
+botWaypoint_C.Actor=True
+BP_LaserTrap_C.Default=True
+BP_LaserTrap_C.Tick=True
+BP_LaserTrap_C.Replication=True
+FirstPersonExampleMap_C.Default=True
+FirstPersonExampleMap_C.HelperBot=True
+MouseChar_C.Default=True
+MouseChar_C.Tick=True
+MouseChar_C.Character=True
+MouseChar_C.Camera=True
+MouseChar_C.Pawn=True
+MouseChar_C.Rendering=True
+MouseChar_C.Replication=True
+MouseChar_C.Input=True
+MouseChar_C.Actor=True
+FlyingChar_C.Default=True
+FlyingChar_C.Tick=True
+FlyingChar_C.Pawn=True
+FlyingChar_C.Camera=True
+FlyingChar_C.Rendering=True
+FlyingChar_C.Replication=True
+FlyingChar_C.Input=True
+FlyingChar_C.Actor=True
 
 [DetailPropertyExpansion]
 Brush=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
@@ -602,14 +655,14 @@ OnlyBuildVisibility=False
 
 [PlacementMode]
 RecentlyPlaced=/Game/BP_LaserTrap.BP_LaserTrap;
+RecentlyPlaced=/Game/lightblue_glossy.lightblue_glossy;
+RecentlyPlaced=/Game/red_matte.red_matte;
+RecentlyPlaced=/Game/white_glossy.white_glossy;
 RecentlyPlaced=/Game/NewBlueprint.NewBlueprint;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/lightbrown_matte.lightbrown_matte;
 RecentlyPlaced=/Game/gray_matte.gray_matte;
-RecentlyPlaced=/Game/red_matte.red_matte;
-RecentlyPlaced=/Game/white_glossy.white_glossy;
 RecentlyPlaced=/Game/white_matte.white_matte;
-RecentlyPlaced=/Game/lightblue_glossy.lightblue_glossy;
 RecentlyPlaced=/Game/lightblue_matte.lightblue_matte;
 RecentlyPlaced=/Game/lightgray_matte_metallic.lightgray_matte_metallic;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
@@ -629,6 +682,9 @@ RecentlyPlaced=/Game/red_glossy.red_glossy;
 /Game/lightbrown_matte.lightbrown_matte=1
 /Game/BP_laser.BP_laser=0
 /Game/laser_mat.laser_mat=0
+/Game/BP_LaserTrap.BP_LaserTrap=0
+/Game/FirstPersonBP/Blueprints/MouseChar.MouseChar=0
+/Game/FirstPersonBP/Blueprints/FlyingChar.FlyingChar=0
 
 [MaterialEditor]
 LightDir=P=-39.999992 Y=27.499994 R=0.000000
@@ -640,6 +696,7 @@ Brush.Actor=False
 Brush.BrushSettings=True
 BoxComponent.Collision=True
 BoolProperty.Variable=True
+StaticMeshComponent.Rendering=True
 
 [DetailCustomWidgetExpansion]
 BoxComponent=BoxComponent.Collision.Collision,
